Extensions: Ensure ExtensionAPIFrameIdMap::OnRenderFrameCreated is called.

Currently ExtensionAPIFrameIDMap::OnRenderFrameCreated is not called for frames
which are already alive during ExtensionWebContentsObserver construction. Ensure
that we call OnRenderFrameCreated for them as well. Fixing this might also
slightly improve Extensions.ExtensionFrameMapCacheHit, since the frame data for
these would be cached early on.

BUG=817075

Change-Id: I9f378f515741c6954bb6a5fc55adae1ff6b6f000
Reviewed-on: https://chromium-review.googlesource.com/939717
Commit-Queue: Karan Bhatia <karandeepb@chromium.org>
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540423}
Former-commit-id: dc11e912fccca09e4c8a18e979bffac8993e7b41